# jpeggpu

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  benchmark.cpp  example.c  example_cpp.cpp  example_tool.c  main.cpp  main.cu
benchmark/: CMakeLists.txt  benchmark.cpp  benchmark_common.hpp  benchmark_jpeggpu.hpp  benchmark_nvjpeg.hpp
example/: CMakeLists.txt  example_tool.c
include/jpeggpu/: jpeggpu.h  jpeggpu.hpp
src/: convert.cu  convert.hpp  decode_cpu.hpp  decode_cpu_legacy.hpp  decode_dc.cu  decode_dc.hpp  decode_destuff.cu  decode_destuff.hpp  decode_gpu.cu  decode_gpu.hpp  decode_huffman.cu  decode_huffman.cu.alt  decode_huffman.hpp  decode_huffman_ac_refinement.cu  decode_huffman_ac_refinement.hpp  decode_huffman_common.hpp  decode_huffman_reader.hpp  decode_transpose.cu  decode_transpose.hpp  decoder.cpp  decoder.hpp  decoder_defs.hpp  defs.cpp  defs.hpp  destuff.cu  destuff.hpp  idct.cpp  idct.cu  idct.hpp  idct_cpu.hpp  jpeggpu.cpp  list.hpp  logger.cpp  logger.hpp  marker.hpp  reader.cpp  reader.hpp  util.cuh  util.hpp
test/: CMakeLists.txt  test.cpp  test.sh
tools/: CMakeLists.txt  split_progressive.cpp
util/: util.h
